experimental: fix spacing to make row hover work
hovering on margin was not activating any element hover, so removed it and
padded elements appropriately

--- a/src/index.css
+++ b/src/index.css
@@ -74,12 +74,12 @@ footer {
 
 /* Set the style for the rows */
 .row {
-    padding-top: 50px;
+    padding: 50px 0 0 0;
     display: inline-flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin: 50px 0 0 0;
+    margin: 0;
     color: white;
     width: 100%;
     font-size: 30px;
@@ -95,6 +95,10 @@ footer {
 
 .row:not(:hover) {
     filter: blur(3px);
+}
+
+.row:first-of-type {
+    padding-top: 120px;
 }
 
 .row:nth-child(odd) {
